--- a/build-ubuntu-16.04-x86_64/Dockerfile
+++ b/build-ubuntu-16.04-x86_64/Dockerfile
@@ -27,6 +27,8 @@ RUN ( \
 ## Doc generation
         apt-get --yes --assume-yes install python-bs4 python-xmltodict doxygen graphviz \
                                            linkchecker && \
+## uLegato dependencies (partial)
+        apt-get --yes --assume-yes install libtool flex gperf bison && \
 ## Altair dependencies
         apt-get --yes --assume-yes install libncurses5-dev libncursesw5-dev && \
         apt-get clean \
